# vscode_stm32f042_template

./: .gitignore  CMakeLists.txt  README.MD
Drivers/: CMakeLists.txt  stm32f0.cfg  system_stm32f0xx.c
Drivers/STM32F0xx_StdPeriph_Driver/inc/: stm32f0xx_rcc.h  stm32f0xx_spi.h
Inc/: can.h  main.h  spi.h  usart.h
Src/: can.c  main.c  spi.c  usart.c
cmake/: toolchain.cmake  utils.cmake
